codex-rs/tui/src/streaming/snapshots/codex_tui__streaming__controller__tests__completed_table_reference.snap
---
source: tui/src/streaming/controller.rs
expression: lines_to_plain_strings(&visible_lines(rendered))
---
[
    " Key                        Value",
    "━━━━━━━━━━━━━━━━━━━━━━━━━  ━━━━━━━",
    " A (https://example.com)    row",
    "",
    "After table.",
]
