codex-rs/tui/src/streaming/snapshots/codex_tui__streaming__controller__tests__completed_table_scrollback.snap
---
source: tui/src/streaming/controller.rs
assertion_line: 1456
expression: "lines_to_plain_strings(&committed.transcript_lines(u16::MAX))"
---
[
    "  ",
    "   Key      Value",
    "  ━━━━━━━  ━━━━━━━",
    "   first    row",
    "  ",
    "  After table.",
]
